Fixed what happens when the page overflows

--- a/source/stylesheets/layout/l_description.css.scss
+++ b/source/stylesheets/layout/l_description.css.scss
@@ -1,6 +1,7 @@
 .l-description {
   margin-left: $avatar-width;
   margin-right: $icon-width;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0px 20px;
+  max-height: $avatar-width;
+  overflow: scroll;
 }
